# mcp-python

./: README.md  pyproject.toml  python_server.py
tests/: test_python_server.py
