[project]
name = "mcp-python"
version = "0.1.0"
description = "MCP server for Python code execution in Docker"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp",
    "gpt-oss @ git+https://github.com/chestnutforty/gpt-oss.git",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
